# naechste

./: .gitignore  .next-structure-lintrc.json  .npmrc.template  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  README.md  RELEASE.md  package.json
.github/: copilot-instructions.md
.github/workflows/: pages.yml  publish.yml
docs/: USAGE_GUIDE.md  _config.yml  getting-started.md  index.html  index.md
docs/assets/: index-BLSP8Ez8.css  index-BUqA9bPN.js  index-Cmp5RSpz.css  index-CpbotAw_.js  index-D3FfRHL1.js  index-D5F31Mop.css  index-_QHwHI2j.css  index-erKkWRd8.js
docs/schemas/: naechste-0.1.2-beta.2.json  naechste-0.1.2-beta.3.json  naechste.json
examples/: bassist-config.json  file-organization-config.json  github-actions.md
examples/bassist-nextjs-app/: README.md
examples/bassist-nextjs-app/app/(admin)/: route.ts
examples/bassist-nextjs-app/tests/: admin.test.ts
examples/nextjs-sample/: .next-structure-lintrc.json  README.md
examples/nextjs-sample/app/: layout.tsx
examples/plain-starter/: .gitignore  .next-structure-lintrc.json  README.naechste.md
scripts/: postinstall.js
src/: config.rs  diagnostics.rs  linter.rs  main.rs  rules.rs  utils.rs
tests/: integration_tests.rs
website/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
website/src/: App.jsx  index.css
website/src/components/: CodeBlock.jsx  Footer.jsx  Navigation.jsx
website/src/pages/: ConfigurationPage.jsx  GettingStartedPage.jsx  Home.jsx  RulesPage.jsx  SchemasPage.jsx
(+19 files in other folders)
