[package]
name = "naechste"
version = "0.1.2-beta.2"
edition = "2021"
authors = ["naechste contributors"]
description = "A fast, Rust-first CLI to enforce Next.js file-structure conventions"
license = "MIT"

[[bin]]
name = "naechste"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
regex = "1.10"
colored = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
